OcctSharp/src/OcctSharp.Native/include/OcctSharp.Native.Parametric.h

OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_register(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, const char* driver, int32_t* id);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_remove(
  const OcctSharp_OcafDocumentHandle* document, const char* entry);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_rewire(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, const int32_t* previous, int32_t count);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_links(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, int32_t next,
  int32_t* values, int32_t capacity, int32_t* count, int32_t* id, int32_t* state);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_state(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, int32_t state, int32_t failure);
/* logbook operation: 0 clear, 1 touched, 2 impacted, 3 valid, 4 done, 5 read flags. */
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_function_logbook(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, int32_t operation, int32_t* flags);
/* Dedicated parameter labels own a NamedData attribute. kind 0 missing, 1 integer,
   2 real, 3 text, 4 integer array, 5 real array. Empty arrays have an explicit count. */
typedef struct OcctSharp_ParameterInfo {
  int32_t kind, integer_value, count, reserved;
  double real_value;
} OcctSharp_ParameterInfo;
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_parameter_set(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, const OcctSharp_ParameterInfo* info,
  const char* text, int32_t text_length, const int32_t* integers, const double* reals);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_parameter_get(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, OcctSharp_ParameterInfo* info,
  char* text, int32_t text_capacity, int32_t* written, int32_t* integers, double* reals, int32_t capacity);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_parametric_text_set(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, const char* key,
  const char* text, int32_t length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_parametric_text_get(
  const OcctSharp_OcafDocumentHandle* document, const char* entry, const char* key,
  int32_t* found, char* text, int32_t capacity, int32_t* written);